# bysykkel

./: .env  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
bysykkel/: client.py  models.py
bysykkel/app/: config.py  main.py
bysykkel/cli/: main.py
tests/: test_client.py
tests/e2e/: compose.yml  test_app.py  test_cli.py
